--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "automattic/woocommerce": "2.0.1"
+        "automattic/woocommerce": "2.0.1",
+      "ext-json": "*"
     }
 }
